892 - Implementando a inclusao de Especialidade